Made edits from translation feedback to Managing Infrastructure & Inventory - https://docs.google.com/spreadsheets/d/1tUiGonvnF6uBppHFNe7r8JjXTB_d8vYpUWhzqVkk3Qc

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Clusters.adoc
@@ -26,7 +26,7 @@ include::Performing_SmartState_Analysis_on_Clusters.adoc[]
 
 . Navigate to menu:Compute[Infrastructure > Clusters].
 . Check the clusters to compare.
-. Click  image:1847.png[] (*Configuration*), and then  image:2148.png[] (*Compare selected Clusters*).
+. Click  image:1847.png[] (*Configuration*), and then  image:2148.png[] (*Compare Selected items*).
   The comparison displays in a default expanded view and lists a limited set of properties.
 +
 
