--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Clusters.adoc
@@ -13,7 +13,7 @@ Detect drift on clusters:
 
 . Navigate to menu:Compute[Infrastructure > Clusters].
 . Click on the cluster to view drift.
-. Click *Relationships* in the Cluster Accordion.
+. Click *Relationships* in the cluster accordion.
 . Click *Drift History*.
 . Check the analyses to compare.
 . Click  image:1946.png[] (*Drift Analysis*) at the top of the screen.
@@ -31,7 +31,7 @@ Detect drift on clusters:
 . Click  image:2023.png[] (*Expanded View*) to see the expanded view.
   Click  image:2024.png[] (*Compressed View*)] to compress the information.
 . Click the minus sign next to the section name to collapse it.
-. To limit the type of views, there are three buttons in the Taskbar.
+. To limit the type of views, there are three buttons in the taskbar.
 +
 * Click  image:2178.png[] (*All attributes*) to see all attributes of the sections selected.
 * Click  image:2204.png[] (*Attributes with different values*) to see only the attributes different across drifts.
