--- a/doc-Managing_Infrastructure_and_Inventory/topics/Retiring_Orchestration_Stacks.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Retiring_Orchestration_Stacks.adoc
@@ -20,5 +20,5 @@ To retire selected stacks immediately:
 
 . Navigate to menu:Compute[Clouds > Stacks]. 
 . Select the orchestration stacks to retire now. 
-. Click  image:2007.png[](*Lifecycle*), and then image:retirement.png[Retire selected Stacks] (*Retire selected Stacks*). A pop-up window appears to confirm the action. 
+. Click  image:2007.png[](*Lifecycle*), and then image:retirement.png[Retire selected Stacks] (*Retire selected Orchestration Stacks*). A pop-up window appears to confirm the action. 
 . Click *OK*.
