--- a/doc-Managing_Infrastructure_and_Inventory/topics/Storage_Support_Notes_about_Analyzing_from_RHEVM_3.1.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Storage_Support_Notes_about_Analyzing_from_RHEVM_3.1.adoc
@@ -17,11 +17,11 @@ Note the following requirements when performing SmartState Analysis on Red Hat E
 
 * Other Notes
 
-** The *Set Server Relationship* option enables the VM SmartState Analysis job to determine the datacenter where a {product-title} appliance is running and thus to identify what storage it has access to in a Red Hat Enterprise Virtualization environment.
+** The *Edit Management Engine Relationship* option enables the VM SmartState Analysis job to determine the datacenter where a {product-title} appliance is running and thus to identify what storage it has access to in a Red Hat Enterprise Virtualization environment.
 
-*** After setting up a {product-title} appliance and performing a refresh of the provider, find the {product-title} appliance in the #Virtual Machine# accordion list and view its summary screen.
+*** After setting up a {product-title} appliance and performing a refresh of the provider, find the {product-title} appliance in the *Virtual Machine* accordion list and view its summary screen.
 
-*** Click menu:Configuration[Edit Server Relationship].
+*** Click menu:Configuration[Edit Management Engine Relationship].
 
 *** Select the server that relates to this instance of the {product-title} appliance.
 
