--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_Virtual_Machine_or_Template_Filter.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_Virtual_Machine_or_Template_Filter.adoc
@@ -40,11 +40,11 @@ image:2130.png[]
 . Click  image:1863.png[] (*Commit Expression Element Changes*) to add the expression.
 . Click *Save*.
 . Type in a name for the search expression in *Save this VM* search as.
-  (Note that this title depends on the type of resource you are searching.) To set the filter to show globally, check *Global Filter*.
+  (Note that this title depends on the type of resource you are searching.) To set the filter to show globally, check *Global search*.
 . Click *Save*.
 
 The filter is saved and will show in the *My Filters* area of the *Filter* accordion.
-If you checked *Global Filter*, the filter will show there.
+If you checked *Global search*, the filter will show under *Global Filters*.
 
 
 
