--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_analysis_history.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_analysis_history.adoc
@@ -2,7 +2,7 @@
 = Viewing Analysis History for a Virtual Machine or Template
 
 Each time a SmartState Analysis is performed on a virtual machine, a record is created of the task.
-This information is accessed either from the *Virtual Machine Accordion* or the *Virtual Machine Summary*.
+This information is accessed either from the virtual machine accordion or the virtual machine summary.
 Use this detail to find when the last analysis was completed and if it completed successfully.
 If the analysis resulted in an error, the error is shown here.
 
