--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
@@ -10,7 +10,7 @@ You can view capacity and utilization data for a datastore.
 . Navigate to menu:Compute[Infrastructure > Datastores], then click the Datastore for which to view Capacity and Utilization data. 
 . Click  image:1994.png[Monitoring] (*Monitoring*), and then image:1994.png[Utilization] (*Utilization*).
 . From *Interval*, select to view hourly or daily data points and the dates to view data.
-. Use *VM Types to Include* to include only managed/registered, managed/unregistered, or unmanaged virtual machines.
+. Use *Show VM Types* to include only managed/registered, managed/unregistered, or unmanaged virtual machines.
 
 * *Managed/Registered VM* - A virtual machine connected to a host and exists in the VMDB. Also, a template connected to a management system and exists in the VMDB. 
 +
@@ -19,7 +19,7 @@ You can view capacity and utilization data for a datastore.
 Templates cannot be connected to a host. 
 ====
 +
-* *Managed/Unregistered VM* - A virtual machine or template that resides on a repository or is no longer connected to a management system or host and exists in the VMDB. A virtual machine previously considered registered might become unregistered if the virtual machine is removed from management system inventory. 
+* *Managed/Unregistered VM* - A virtual machine or template that resides on a repository that is no longer connected to a management system or host, but exists in the VMDB. A virtual machine previously considered registered might become unregistered if the virtual machine is removed from management system inventory. 
 * *Not Managed* - Files discovered on a datastore that do not have a virtual machine associated with them in the VMDB. These files might be registered to a management system that {product-title} does not have configuration information. Possible causes might be the management system has not been discovered or the management system has been discovered but no security credentials are provided. 
 
 . Use *Time Profiles* to select a time range for the data. 
