--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Host_Device_Information.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Host_Device_Information.adoc
@@ -4,5 +4,5 @@ Access information on the hardware devices including processor, CPU type and spe
 
 . Navigate to menu:Compute[Infrastructure > Hosts].
 . Click the host to view the network information.
-. From the Host Accordion, click menu:Properties[Devices].
+. From the host accordion, click menu:Properties[Devices].
 
