--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Host_Network_Information.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Host_Network_Information.adoc
@@ -4,7 +4,7 @@ Access information on networking including switches, network interfaces, and loc
 
 . Navigate to menu:Compute[Infrastructure > Hosts].
 . Click the host to view the network information.
-. From the Host Accordion, click menu:Properties[Network].
+. From the host accordion, click menu:Properties[Network].
 
 
 image:2231.png[]
