--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Tenant_Relationships.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Tenant_Relationships.adoc
@@ -1,10 +1,10 @@
 = Viewing Tenant Relationships
 
-Use the Tenant Accordion's *Relationship* section to see items related to the Tenant. 
+Use the tenant accordion's *Relationship* section to see items related to the tenant. 
 
 
 . Navigate to menu:Compute[Clouds > Tenants]. 
 . Click a tenant to view the configuration. 
-. From the Tenant Accordion, click *Relationships*. 
+. From the tenant accordion, click *Relationships*. 
 . Click the type of *Resource* to see the flavor's relationships. 
 
