--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_Tenant.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_Tenant.adoc
@@ -1,8 +1,8 @@
 = Viewing a Tenant
 
 Click on a specific tenant to view its details.
-The screen provides you with a Tenant Accordion and a Tenant Summary. 
+The screen provides you with a tenant accordion and a tenant summary. 
 
-* Use Tenant Summary Views to change how you are looking at the *Summary*. 
-* Use the Tenant Accordion to view the *Properties* of the tenant and its *Relationships*. 
-* Use the Tenant Summary to see details on *Relationships* (*Cloud Provider*, *Security Groups*, *Instances*, and *Images*), *Quotas* (including all OpenStack *Compute*, *Network*, and *Volume* quotas) and *Smart Management* (*Company Tags*). 
+* Use tenant summary Views to change how you are looking at the *Summary*. 
+* Use the tenant accordion to view the *Properties* of the tenant and its *Relationships*. 
+* Use the tenant summary to see details on *Relationships* (*Cloud Provider*, *Security Groups*, *Instances*, and *Images*), *Quotas* (including all OpenStack *Compute*, *Network*, and *Volume* quotas) and *Smart Management* (*Company Tags*). 
