--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machine_or_Template_Summary.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machine_or_Template_Summary.adoc
@@ -33,7 +33,7 @@ image:2169.png[]
 
 image:2170.png[]
 
-* *Normal Operating Ranges* shows the values the normal operating range for this virtual machine.
+* *Normal Operating Ranges* shows the values for the normal operating range for this virtual machine.
   These statistics are used in calculating right sizing recommendations. 
 +
 
