--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
@@ -189,12 +189,12 @@ Compare virtual machines and templates:
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Click the accordion for the items to analyze.
 . Check the items to compare.
-. Click  image:1847.png[] btn:[(Configuration)], and then  image:2148.png[] btn:[(Compare Selected)].
+. Click  image:1847.png[] btn:[(Configuration)], and then  image:2148.png[] btn:[(Compare Selected items)].
   The comparison displays in a compressed view with a limited set of properties listed.
 +
 image:2149.png[]
 +
-. To delete an item from the comparison, click  image:1861.png[]btn:[(Remove this from the comparison)] at the bottom of the items column.
+. To delete an item from the comparison, click  image:1861.png[]btn:[(Remove this item)] at the bottom of the items column.
   This option is only available when comparing more than two virtual machines.
 . To view many items on one screen, go to a compressed view by clicking  image:2024.png[] btn:[(Compressed View)].
   To return to an expanded view, click  image:2023.png[] btn:[(Expanded View)].
