--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Cluster.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Cluster.adoc
@@ -1,17 +1,17 @@
 [[_reviewing_a_cluster]]
 = Viewing a Cluster
 
-You can click on a specific Cluster to view its details.
-The screen provides you with a Cluster Taskbar, a Cluster Accordion, and a Cluster Summary. 
+You can click on a specific cluster to view its details.
+The screen provides you with a cluster taskbar, a cluster accordion, and a cluster summary. 
 
 .Cluster Management Screen
 image:2206.png[]
 
-. *Cluster Taskbar*: Choose between Configuration, Policy and Monitoring options for the selected Cluster 
-. *Cluster Summary*: See Cluster summary such as Relationships, Totals for Hosts, Totals for VMs 
+. *Cluster Taskbar*: Choose between *Configuration*, *Policy* and *Monitoring* options for the selected cluster 
+. *Cluster Summary*: See cluster summary such as *Relationships*, *Totals for Hosts*, *Totals for VMs* 
 . *Cluster Summary Views*: Choose between graphical or text view of the cluster summary 
-. *Cluster Summary PDF*: Generates Cluster summary in PDF format 
-. *Cluster Accordion*: See details about Properties, Relationships, Storage Relationships for the selected Cluster 
+. *Cluster Summary PDF*: Generates cluster summary in PDF format 
+. *Cluster Accordion*: See details about *Properties*, *Relationships*, *Storage Relationships* for the selected cluster 
 
 
 
