--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Host.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Host.adoc
@@ -2,16 +2,16 @@
 = Viewing a Host
 
 You can click on a specific host to review it.
-The screen shows a Host Virtual Thumbnail, a Host Taskbar, a Host Accordion, and a Host Summary. 
+The screen shows a host virtual thumbnail, a host taskbar, a host accordion, and a host summary. 
 
 .Host Management Screen
 image:2218.png[]
 
-. *Host Task Bar*: Use the Host Taskbar to take actions on the selected host 
-. *Host Summary*: Use the Host Summary to see the properties of a host, drill down to a hosts information, and, view its installed virtual machines. 
+. *Host Taskbar*: Use the host taskbar to take actions on the selected host 
+. *Host Summary*: Use the host summary to see the properties of a host, drill down to a host's information, and view its installed virtual machines
 . *Host Summary Views*: Choose between graphical or text view of the provider summary 
-. *Host PDF*: Generates Host summary in PDF format 
-. *Host Accordion*: See details about Properties, Relationships, Security and Configuration for the selected Host 
+. *Host PDF*: Generates host summary in PDF format 
+. *Host Accordion*: See details about *Properties*, *Relationships*, *Security* and *Configuration* for the selected host 
 
 
 
