--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Object_Stores.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Object_Stores.adoc
@@ -2,7 +2,7 @@
 
 Apply tags to object stores to categorize them together at the same time.
 
-. Navigate to menu:Compute[Clouds > Object Stores]. 
+. Navigate to menu:Storage[Object Stores]. 
 . Select the object stores to tag. 
 . Click  image:1941.png[Policy] (*Policy*), and then image:2158.png[Edit Tags] (*Edit Tags*). 
 . *Select a customer tag to assign* from the first list. 
