--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_edit_Virtual_Machine_or_Template_Properties.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_edit_Virtual_Machine_or_Template_Properties.adoc
@@ -7,7 +7,7 @@ SmartState Analysis also can detect this.
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Click the accordion for the items to edit.
 . Click the item to edit properties.
-. Click  image:1847.png[] (*Configuration*), and then  image:1851.png[] (*Edit this VM or Edit this Template*) on the Taskbar.
+. Click  image:1847.png[] (*Configuration*), and then  image:1851.png[] (*Edit selected item*) on the Taskbar.
 . From the *Parent VM* dropdown, select the parent virtual machine.
 . From *Child VM* selection, select virtual machines that are based on the current virtual machine from the list of *Available VMs*.
 . Click *Save*.
