--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
@@ -2,7 +2,7 @@
 
 Using an *Analysis Profile*, collect event log information from your instances.
 
-ifdef::cfme[See section link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/general-configuration/#profiles[Setting a Default Analysis Profile] in the CloudForms General Configuration guide.]
+ifdef::cfme[See the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/general_configuration/[Setting a Default Analysis Profile] section in the CloudForms General Configuration guide.]
 
 ifdef::miq[See section "Setting a Default Analysis Profile" in _General Configuration_.]
 
