--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Flavor_Relationships.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Flavor_Relationships.adoc
@@ -1,10 +1,10 @@
 = Viewing Flavor Relationships
 
-Use the *Relationship* section in the *Flavor Accordion* to see items related to the flavor. 
+Use the *Relationship* section in the flavor accordion to see items related to the flavor. 
 
 
 . Navigate to menu:Compute[Clouds > Flavors]. 
 . Click a flavor to view the configuration. 
-. From the *Flavor Accordion*, click *Relationships*. 
-. Click the type of *Resource* to see the flavor's relationships. 
+. From the flavor accordion, click *Relationships*. 
+. Click the type of resource to see the flavor's relationships. 
 
