--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Storage_Adapters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Storage_Adapters.adoc
@@ -4,7 +4,7 @@ Access information on the storage adapters including storage type for each host.
 
 . Navigate to menu:Compute[Infrastructure > Hosts].
 . Click the host to view the network information.
-. From the Host Accordion, click menu:Properties[Storage Adapters].
+. From the host accordion, click menu:Properties[Storage Adapters].
 
 
 image:2232.png[]
