--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_User_Information_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_User_Information_for_an_Instance_or_Image.adoc
@@ -5,9 +5,8 @@
 Explore the user to get details on the user's account, including group memberships.
 
 . Navigate to menu:Compute[Clouds > Instances].
-. Click the accordion for the item to view user information.
-. Click on the item to view its *Summary*.
-. From the *Security* section of the *Instance Summary*, click *Users*.
+. Click on the instance or image to open its summary page.
+. From the *Security* section of the summary page, click *Users*.
 . Click the user to view details.
 
 
