--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_the_Host_Timeline.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_the_Host_Timeline.adoc
@@ -3,8 +3,8 @@
 View the timeline of events for the virtual machines registered to a host.
 
 . Navigate to menu:Compute[Infrastructure > Hosts].
-. Click the Host to view the timeline.
-. Click  image:1994.png[] (*Monitoring*), and then  image:1995.png[] (*Timelines*) or from the Host Accordion, click menu:Properties[Timelines].
+. Click the host to view the timeline.
+. Click  image:1994.png[] (*Monitoring*), and then  image:1995.png[] (*Timelines*) or from the host accordion, click menu:Properties[Timelines].
 . From *Options*, customize the period of time to display and the types of events to see.
 +
 * Use *Show* to select types of events to show on the timeline.
