Added missing word

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Hosts.adoc
@@ -1,6 +1,6 @@
 = Detecting Drift on Hosts
 
-Over time, the configuration of a  might change.
+Over time, the configuration of a host might change.
 Drift is the comparison of a host to itself at different points in time.
 The host requires analysis at least twice to collect information.
 Detecting drift provides you the following benefits:
