Edited wording  of step 9 in Installing the Primary Database Appliance -- Luke Couzens confirmed the wording in Google doc: https://docs.google.com/document/d/1Y_A4t00hYrwmytIypD_5_U-2f269dQR04BwGscM2_gE/edit#

--- a/doc-Configuring_High_Availability/topics/Installation.adoc
+++ b/doc-Configuring_High_Availability/topics/Installation.adoc
@@ -16,7 +16,7 @@ The primary database appliance functions as an external database to the standard
 . Select *Create key* to create the encryption key. You can create a new key, or use an existing key on your system by selecting *Fetch key from remote machine* and following the prompts.
 . Select *Create Internal Database*.
 . Select the database disk. {product-title_short} then activates the configuration.
-. For *Configure this server as a dedicated database instance?*, select `y`. Selecting this option configures this appliance as a database appliance only, and therefore `evmserverd` processes will not run. 
+. For *Should this appliance run as a standalone database server?*, select `Y`. Selecting this option configures this appliance as a database appliance only, and therefore `evmserverd` processes will not run. 
 +
 [WARNING]
 ====
