--- a/doc-General_Configuration/cfme/master.adoc
+++ b/doc-General_Configuration/cfme/master.adoc
@@ -25,7 +25,7 @@ include::topics/Smart_Proxies.adoc[]
 
 include::topics/About.adoc[]
 
-include::topics/RH_Access_Insights.adoc[]
+include::topics/RH_Insights.adoc[]
 
 
 
