updated file names to rh insights

--- a/doc-General_Configuration/cfme/master.adoc
+++ b/doc-General_Configuration/cfme/master.adoc
@@ -25,5 +25,5 @@ include::topics/Smart_Proxies.adoc[]
 
 include::topics/About.adoc[]
 
-include::topics/RH_Access_Insights.adoc[]
+include::topics/RH_Insights.adoc[]
 
