revise doc to move note to its own section

--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -33,10 +33,7 @@ creation of capacity and utilization.
   This role has a dedicated worker, and there can be more than one
   server with this role in a zone.
 
-[NOTE]
-====
-{product-title_short} can collect capacity and utilization metrics from Google Compute Engine once Google Cloud Monitoring API is enabled. Visit the Google APIs API Manager site to enable the Google Cloud Monitoring API. Once enabled, it may take a few minutes to propgate to {product-title_short}.
-====
+
 
 
 [[assigning_the_capacity_and_utilization_server_roles]]
@@ -279,6 +276,12 @@ ifdef::miq[Managing Providers]
   After adding the provider, capacity and utilization data for your instances
   populate in a few minutes.
 
+[[data_collection_for_gce]]
+=== Data Collection for Google Compute Engine
+  
+{product-title} can collect capacity and utilization metrics from Google Compute Engine once Google Cloud Monitoring API is enabled. Visit the Google APIs API Manager site to enable the Google Cloud Monitoring API. Once enabled, it may take a few minutes to propgate to {product-title_short}.
+
+  
 [[data_collected]]
 === Data Collected
 
