--- a/doc-Configuring_High_Availability/topics/Database_Failover.adoc
+++ b/doc-Configuring_High_Availability/topics/Database_Failover.adoc
@@ -64,11 +64,22 @@ To reintroduce the failed node:
 ------
 # systemctl stop $APPLIANCE_PG_SERVICE
 ------
+. Correct time synchronization is required to reintroduce the failed node. To synchronize the time between the primary and standby appliances, configure the following on all of the database and appliance nodes:
+.. Edit `/etc/ntp.conf` with valid NTP server information.
+.. Run the following to restart the time synchronization services:
++
+------
+# systemctl disable chronyd.service
+# systemctl stop chronyd.service
+# systemctl enable ntpd.service
+# systemctl start ntpd.service
+------   
 +
 . Run `pg_rewind` on the failed primary server as the `postgres` user:
 +
 ------
-# pg_rewind -D $APPLIANCE_PG_DATA --source-server="host=<new_master_ip> user=root password=<db_password> dbname=vmdb_production"
+# su - postgres
+$ pg_rewind -D $APPLIANCE_PG_DATA --source-server="host=<new_master_ip> user=root password=<db_password> dbname=vmdb_production"
 ------
 +
 . Add the following lines for standby configuration to the `/etc/repmgr.conf` file:
@@ -80,18 +91,36 @@ follow_command='repmgr standby follow'
 logfile=/var/log/repmgr/repmgrd.log
 ------
 +
-. Copy over `/var/lib/pgsql/.pgpass` from the new primary server to the failed primary server.
+. Copy the `/var/lib/pgsql/.pgpass` file from the new primary server to the failed primary server. Change the file's ownership to the `postgres` user and group, and the permissions to 600:
++
+------
+# chown postgres:postgres /var/lib/pgsql/.pgpass
+# chmod 600 /var/lib/pgsql/.pgpass
+------
++
 . Run `repmgr standby follow` as the `postgres` user on the failed primary server to add it as a standby server:
 +
 ------
-# repmgr -f /etc/repmgr.conf -D $APPLIANCE_PG_DATA -h <new_master_ip> -U root -d vmdb_production standby follow
+$ repmgr -f /etc/repmgr.conf -D $APPLIANCE_PG_DATA -h <new_master_ip> -U root -d vmdb_production standby follow
 ------
 +
 [NOTE]
 ====
-If the `follow` command times out and `postgresql.log` reports a message similar to `requested WAL segment 000000020000000000000004 has already been removed`, you can correct this by removing the contents of the data directory and reinitializing the standby as described in xref:configuring_standby_db[] to re-add the node. 
+If the `follow` command times out and `postgresql.log` reports a message similar to `requested WAL segment 000000020000000000000004 has already been removed`, you can correct this by removing the contents of the data directory and reinitializing the standby to re-add the node. This occurs when the write ahead log (WAL) required to catch up the standby server is no longer available on the primary.
 
-This occurs when the write ahead log (WAL) required to catch up the standby server is no longer available on the primary. See the https://www.postgresql.org/docs/9.5/static/continuous-archiving.html[PostgreSQL documentation] for more information on the WAL log.
+Correct this by running the following steps:
+
+. Delete all database-related data from the failed node and delete the `/data` folder on the failed primary database:
++
+----
+# rm -rf /opt/rh/cfme-appliance/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/*
+# rm /etc/repmgr.conf
+----
++
+. Delete the failed database node entry from new primary database, by selecting `*` from the `repl_nodes` table, and delete any entries from `repl_nodes` table where `id = <cluster node id of failed node>`.
+. Reinitialize the standby database as described in xref:configuring_standby_db[] to re-add the node.
+
+For more information on the WAL log, see the https://www.postgresql.org/docs/9.5/static/continuous-archiving.html[PostgreSQL documentation].
 ====
 +
 . Start and enable `repmgrd` for automatic failover:
