made revisions based on reviewer feedback

--- a/common/introduction.adoc
+++ b/common/introduction.adoc
@@ -81,8 +81,8 @@ Due to browser limitations, Red Hat supports logging in to only one tab for each
 Additionally, the following must be configured to use {product-title}:
 
 * The {product-title} appliance must already be installed and activated in your enterprise environment.
-* The SmartProxy must have visibility to the virtual machines and cloud instances that you want to control.
-* Fore more information, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#smartproxies[SmartProxies] in the {product-title_short} General Configuration guide. 
+* The SmartProxy must have visibility into the virtual machines and cloud instances that you want to control.
+* For more information, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#smartproxies[SmartProxies] in the {product-title_short} _General Configuration_ guide. 
 
 
 [[terminology]]
