--- a/doc-Configuring_High_Availability/topics/Installation.adoc
+++ b/doc-Configuring_High_Availability/topics/Installation.adoc
@@ -101,6 +101,14 @@ The standby database appliance is a copy of the primary database appliance and t
 
 The steps to configure the standby database appliance are similar to that of the primary database appliance, in that they prepare the appliance to be database-only, but as the standby.
 
+[NOTE]
+====
+The current {product-title_short} version contains a known limitation when configuring a dedicated database disk from the appliance console menu.
+
+To work around this, create and mount the dedicated database partition manually with exactly same information from the primary database before configuring the standby database appliance as below. [ADD STEPS?]
+See https://bugzilla.redhat.com/show_bug.cgi?id=1412940 for more information.
+====
+
 On the standby database appliance, configure the following:
 
 . In the appliance console menu, select *Configure Database Replication*. 
