--- a/doc-Integration_with_ServiceNow/cfme/master.adoc
+++ b/doc-Integration_with_ServiceNow/cfme/master.adoc
@@ -1,6 +1,6 @@
 =  Integration with ServiceNow
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.5-beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -17,5 +17,7 @@ include::topics/Overview.adoc[]
 include::topics/Configuring_ServiceNow_Connection.adoc[]
 include::topics/Managing_record_attributes.adoc[]
 include::topics/Use_Cases.adoc[]
+
+
 
 
