--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Managing Providers
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.5-beta
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -34,6 +34,8 @@ include::topics/Containers_Providers.adoc[]
 
 :leveloffset: 1
 include::topics/Storage_Managers.adoc[]
+
+
 
 
 
