--- a/doc-Configuring_High_Availability/cfme/master.adoc
+++ b/doc-Configuring_High_Availability/cfme/master.adoc
@@ -1,6 +1,6 @@
 =  Configuring High Availability
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.5-beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -17,6 +17,8 @@ include::common/attributes/cfme.adoc[]
 include::topics/Overview.adoc[]
 include::topics/Installation.adoc[]
 include::topics/Database_Failover.adoc[]
+
+
 
 
 
