--- a/doc-General_Configuration/cfme/master.adoc
+++ b/doc-General_Configuration/cfme/master.adoc
@@ -1,6 +1,6 @@
 = General Configuration
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.5-beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -26,4 +26,6 @@ include::topics/Smart_Proxies.adoc[]
 include::topics/About.adoc[]
 
 include::topics/RH_Access_Insights.adoc[]
+
+
 
