--- a/doc-Installing_on_AWS/cfme/master.adoc
+++ b/doc-Installing_on_AWS/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Amazon Elastic Compute Cloud (Amazon EC2)
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.5-beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -33,4 +33,6 @@ include::common/initial-login.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
+
 
