--- a/doc-Installing_on_AWS/topics/installation.adoc
+++ b/doc-Installing_on_AWS/topics/installation.adoc
@@ -14,7 +14,7 @@ ifdef::miq[]
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *Amazon* from the *--Choose your platform--* list.
-. Select *Stable (euwe-2)* from the *--Choose a release-git add-* list.
+. Select *Stable (fine-2)* from the *--Choose a release-git add-* list.
 . Follow the instructions to download the appliance.
 endif::miq[]
 
@@ -80,4 +80,5 @@ $ aws ec2 import-image --disk-containers file://containers.json --region BUCKET_
  $ aws ec2 describe-import-image-tasks --region BUCKET_REGION --import-task-ids import-ami-AMI_ID_GOT_FROM_RESPONSE
 ----
 +
+
 
