--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Red Hat Enterprise Linux OpenStack Platform
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.5-beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -39,5 +39,7 @@ include::common/initial-login-changepw.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
+
 
 
