--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
@@ -14,7 +14,7 @@ ifdef::miq[]
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *OpenStack* from the *--Choose your platform--* list.
-. Select *Stable (euwe-2)* from the *--Choose a release--* list.
+. Select *Stable (fine-2)* from the *--Choose a release--* list.
 . Follow the instructions to download the appliance.
 endif::miq[]
 
@@ -146,6 +146,7 @@ image:7217.png[title="Manage Floating IP Associations"]
 ======
 To disassociate a floating IP address from an instance when it is no longer required, click *Release Floating IPs*.
 ======
+
 
 
 
