--- a/doc-Managing_Infrastructure_and_Inventory/miq/index.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/miq/index.adoc
@@ -1,6 +1,6 @@
 = Managing Infrastructure and Inventory
 :imagesdir: images
-:vernum: 4.2
+:vernum: 4.5-beta
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -75,4 +75,6 @@ include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Object_Stores.adoc
 
 :leveloffset: 1
 include::doc-Managing_Infrastructure_and_Inventory/miq/topics/VDS_Switches.adoc[]
+
+
 
