--- a/doc-QuickStart_OpenStack_Provider_Guide/miq/index.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/miq/index.adoc
@@ -20,7 +20,7 @@ include::topics/installing.adoc[]
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *OpenStack* from the *--Choose your platform--* list.
-. Select *Stable (euwe-2)* from the *--Choose a release--* list.
+. Select *Stable (fine-2)* from the *--Choose a release--* list.
 . Follow the instructions to download the appliance.
 
 === Deploying the Appliance as a Virtual Machine
@@ -134,3 +134,4 @@ You can manage tenants through two different sections of the {product-title_shor
 * To view the {product-title_short} tenants, navigate to menu:Compute[Administrator | EVM > Configuration]. Under the *Access Control* accordion, click *Tenants*. 
 
 The {product-title_short} view provides a heirarchy, with the top _root_ level being the base {product-title_short} tenant. Every cloud provider is a child tenant of the base {product-title_short} tenant. Each OpenStack tenant is nested under its corresponding cloud provider. 
+
