--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1480,10 +1480,19 @@ During the restart, you are unable to access the server. When the restart is com
 [[customization-and-logos]]
 ===== Customization and Logos
 
+
 [[custom-logos]]
 ====== Custom Logos
 
-Use *Custom Logos* to display your own logo in the corner of the console or on the {product-title} login panel.
+Use *Custom Logos* to display your own logo in the corner of the console or on the {product-title} login panel. Use the procedures below to upload a custom logo to the console, and to customize the login background and login panel text on the console.
+
+[NOTE]
+====
+* After upgrading from an earlier {product-title} version, if your custom logo was already in use in the {product-title} version you upgraded from, and your logo image file is still in place in `vmdb/public/upload`, you may have to uncheck and recheck the option to *Use Custom Logo* to re-enable displaying your custom logo. See xref:uploading-a-custom-logo-to-the-console[] for the procedure on how to access the *Use Custom Logo* option, or if you want to upload another custom logo to the console and customize the login background image and login panel text. 
+
+* Additionally, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`; see xref:display-custom-settings[] for the procedure on how to set the configuration settings.
+====
+
 
 [[uploading-a-custom-logo-to-the-console]]
 ====== Uploading a Custom Logo to the Console
@@ -1501,6 +1510,11 @@ image:2071.png[]
 . Click *Upload*. The icon is displayed above the file name box, and an option is shown to use the logo.
 . Check *Use Custom Logo* Image to add the logo to your console.
 . Click *Save*.
+
+[NOTE]
+====
+* To enable displaying your custom logo, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`. See xref:display-custom-settings[] for the procedure on how to set the configuration settings.
+====
 
 [[customizing-the-login-background]]
 ====== Customizing the Login Background
@@ -1521,6 +1535,7 @@ image:2073.png[]
 . Check *Use Custom Login Image* to add the logo to your console.
 . Click *Save*.
 
+
 [[customizing-the-login-panel-text]]
 ====== Customizing the Login Panel Text
 
@@ -1536,6 +1551,23 @@ image:2075.png[]
 . Check *Use Custom Login Text* box to add the text to the screen.
 . Click *Save*.
 
+
+[[display-custom-settings]]
+====== Displaying the Custom Configuration Settings
+
+To display your custom logo image, login background image, and login panel text on the console:
+
+. Navigate to menu:Settings[Configuration].
+. Click the *Access Control* accordion.
+. Click *Tenants*, then click *My Company*.
+. Click image:1847.png[](*Configuration*), then click image:1851.png[](*Edit this item*).
++
+image:use-config-settings.png[]
++
+. Click *Use Configuration Settings* to switch it to `Yes`.
+. Click *Save*. 
+
+ 
 [[advanced-settings]]
 ===== Advanced Settings
 
