--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1521,7 +1521,7 @@ image:2071.png[]
 
 To customize the login background:
 
-. Make sure the logo that you want to use is accessible from the computer where you are running the console. The file must be in PNG format with dimensions of 1280 x 1000.
+. Make sure the logo that you want to use is accessible from the computer where you are running the user interface. The file must be in PNG format with dimensions of 1280 x 1000.
 . Navigate to menu:Settings[Configuration].
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the server is located.
@@ -1546,7 +1546,7 @@ To customize the login panel text:
 . Click the zone where the server is located.
 . Click on the server.
 . Click the *Custom Logos* tab.
-. In *Custom Login Panel Text*, type in the text that you want to show on the console's login screen.
+. In *Custom Login Panel Text*, enter the text that you want to show on the login screen.
 image:2075.png[]
 . Check *Use Custom Login Text* box to add the text to the screen.
 . Click *Save*.
