Added a new section 4.1.4.5.5. Displaying the Custom Configuration Settings, and a new note in sections 4.1.4.5.1. Custom Logos and 4.1.4.5.2. Uploading a Custom Logo to the Console

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1435,14 +1435,21 @@ During the restart, you are unable to access the server. When the restart is com
 [[custom-logos]]
 ====== Custom Logos
 
-Use *Custom Logos* to display your own logo in the corner of the console or on the {product-title} login panel.
+Use *Custom Logos* to display your own logo in the corner of the {product-title} user interface and on the login screen. Use the procedures below to upload a custom logo to the user interface, and to customize the login background and login panel text on the user interface.
+
+[NOTE]
+====
+* After upgrading from an earlier {product-title} version, if your custom logo was already in use in the {product-title} version you upgraded from, and your logo image file is still in place in `vmdb/public/upload`, you may have to uncheck and recheck the option to *Use Custom Logo Image* to re-enable displaying your custom logo. See xref:uploading-a-custom-logo-to-the-console[] for the procedure on how to access the *Use Custom Logo Image* option, or if you want to upload another custom logo to the user interface and customize the login background image and login panel text. 
+
+* Additionally, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`; see xref:display-custom-settings[] for the procedure on how to set the configuration settings.
+====
 
 [[uploading-a-custom-logo-to-the-console]]
-====== Uploading a Custom Logo to the Console
+====== Uploading a Custom Logo to the User Interface
 
-To upload a custom logo to the console:
+To upload a custom logo to the user interface:
 
-. Make sure the desired logo is accessible from the computer where you are running the console. The file must be in portable network graphics (png) format with dimensions of 350 x 70.
+. Make sure the desired logo is accessible from the computer where you are running the {product-title_short} user interface. The file must be in portable network graphics (png) format with dimensions of 350 x 70.
 . From the settings menu, select *Configuration*.
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the {product-title} server is located.
@@ -1451,15 +1458,20 @@ To upload a custom logo to the console:
 image:2071.png[]
 . Click *Browse* in the *Custom Logo Image (Shown on top right of all screens)* area to go to the location where the logo file is located.
 . Click *Upload*. The icon is displayed above the file name box, and an option is shown to use the logo.
-. Check *Use Custom Logo* Image to add the logo to your console.
+. Check *Use Custom Logo Image* to add the logo to your user interface.
 . Click *Save*.
+
+[NOTE]
+====
+To enable displaying your custom logo, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`. See xref:display-custom-settings[] for the procedure on how to set the configuration settings.
+====
 
 [[customizing-the-login-background]]
 ====== Customizing the Login Background
 
 To customize the login background:
 
-. Make sure the logo that you want to use is accessible from the computer where you are running the console. The file must be in PNG format with dimensions of 1280 x 1000.
+. Make sure the logo that you want to use is accessible from the computer where you are running the {product-title_short} user interface. The file must be in PNG format with dimensions of 1280 x 1000.
 . From the settings menu, select *Configuration*.
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the server is located.
@@ -1483,9 +1495,25 @@ To customize the login panel text:
 . Click the zone where the server is located.
 . Click on the server.
 . Click the *Custom Logos* tab.
-. In *Custom Login Panel Text*, type in the text that you want to show on the console's login screen.
+. In *Custom Login Panel Text*, enter the text that you want to show on the login screen.
 image:2075.png[]
 . Check *Use Custom Login Text* box to add the text to the screen.
+. Click *Save*.
+
+
+[[display-custom-settings]]
+====== Displaying the Custom Configuration Settings
+
+To enable displaying your custom logo in the corner of the {product-title} user interface and on the login screen: 
+
+. Navigate to menu:Settings[Configuration].
+. Click the *Access Control* accordion.
+. Click *Tenants*, then click *My Company*.
+. Click image:1847.png[](*Configuration*), then click image:1851.png[](*Edit this item*).
++
+image:use-config-settings.png[]
++
+. Click *Use Configuration Settings* to switch it to `Yes`.
 . Click *Save*.
 
 [[advanced-settings]]
