--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1513,7 +1513,7 @@ image:2071.png[]
 
 [NOTE]
 ====
-* To enable displaying your custom logo, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`. See xref:display-custom-settings[] for the procedure on how to set the configuration settings.
+To enable displaying your custom logo, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`. See xref:display-custom-settings[] for the procedure on how to set the configuration settings.
 ====
 
 [[customizing-the-login-background]]
