restructured Uploading the Appliance sections to show methods for uploading to different versions of RHEV. Throughout the guide, renamed RHEV to RHV in general, and where it is referring to 4.0+.

--- a/doc-Installing_on_Red_Hat_Virtualization/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/cfme/master.adoc
@@ -1,6 +1,6 @@
-= Installing ManageIQ on Red Hat Enterprise Virtualization
+= Installing Red Hat CloudForms on Red Hat Virtualization
 :imagesdir: images
-:vernum: 0
+:vernum: 4.1
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -8,9 +8,9 @@
 :experimental:
 
 // Custom attributes
-include::common/attributes/miq.adoc[]
+include::common/attributes/cfme.adoc[]
 
-:miq:
+:cfme:
 
 :numbered:
 
