Sentence restructuring in the note in custom logos

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1439,7 +1439,7 @@ Use *Custom Logos* to display your own logo in the corner of the {product-title}
 
 [NOTE]
 ====
-* After upgrading from an earlier {product-title} version, if your custom logo was already in use in the {product-title} version you upgraded from, and your logo image file is still in place in `vmdb/public/upload`, you may have to uncheck and recheck the option to *Use Custom Logo Image* to re-enable displaying your custom logo. See xref:uploading-a-custom-logo-to-the-console[] for the procedure on how to access the *Use Custom Logo Image* option, or if you want to upload another custom logo to the user interface and customize the login background image and login panel text. 
+* If you have upgraded from an earlier {product-title} version and your custom logo was already in use before migration, although your logo image file is still in place in `vmdb/public/upload` you may have to uncheck and recheck the option to *Use Custom Logo Image* to re-enable displaying your custom logo. See xref:uploading-a-custom-logo-to-the-console[] for the procedure on how to access the *Use Custom Logo Image* option, or if you want to upload another custom logo to the user interface and customize the login background image and login panel text. 
 
 * Additionally, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`; see xref:display-custom-settings[] for the procedure on how to set the configuration settings.
 ====
