a few small edits - lowercasing Image Uploader, etc

--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -36,9 +36,9 @@ The method for uploading the {product-title_short} appliance differs depending o
 
 In Red Hat Virtualization 4.0 and newer, upload the `QCOW2` appliance image using the Red Hat Virtualization Administration Portal.
 
-In Red Hat Enterprise Virtualization 3.6 and earlier, upload the `OVA` appliance image using the Image Uploader tool. You can also use this method for Red Hat Virtualization 4.0 systems.
+In Red Hat Enterprise Virtualization 3.6 and earlier, upload the `OVA` appliance image using the image uploader tool. You can also use this method for Red Hat Virtualization 4.0 systems.
 
-Uploading the {product-title} appliance file onto Red Hat Virtualization requires:
+Uploading the {product-title} appliance file to Red Hat Virtualization requires:
 
 * 44 GB of storage space on both the export domain and the local partition where `/tmp` resides, as the `OVF` archive is locally expanded into that directory.
 * 8 GB RAM.
@@ -80,20 +80,19 @@ See the https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1
 [[uploading-the-appliance-with-the-image-uploader]]
 ==== Uploading the Appliance with the Image Uploader
 
-In Red Hat Enterprise Virtualization 3.6 and earlier, upload the appliance as an `OVA` image using the Image Uploader tool. Red Hat Virtualization 4.0 supports this method as well.
+In Red Hat Enterprise Virtualization 3.6 and earlier, upload the appliance as an `OVA` image using the image uploader tool. Red Hat Virtualization 4.0 supports this method as well.
 
 Refer to
-https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1-beta/html-single/administration_guide/#sect-The_Image_Uploader_Tool[The Image Uploader Tool]
-to for details on using the Image Uploader.
+https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1-beta/html-single/administration_guide/#sect-The_Image_Uploader_Tool[The Image Uploader Tool] in the _Red Hat Virtualization Administration Guide_ for more details on using the image uploader.
 
-To install the Image Uploader, install the `rhevm-image-uploader` package containing the `engine-image-uploader` script to your local machine:
+To install the image uploader, install the `rhevm-image-uploader` package containing the `engine-image-uploader` script to your local machine:
 
 ----
 # yum install rhevm-image-uploader
 ----
 
 
-Upload the {product-title} appliance using the Image Uploader tool:
+Upload the {product-title} appliance using the image uploader:
 
 . Change to the directory containing the {product-title} appliance.
 . Run the following command:
@@ -127,7 +126,7 @@ It takes approximately 90 minutes to upload the {product-title} appliance file t
 [[uploading-the-appliance-manually]]
 ==== Uploading the Appliance Manually
 
-The following procedure provides manual upload instructions if the Image Uploader tool is not available or fails to upload.
+The following procedure provides manual upload instructions if the image uploader tool is not available or fails to upload.
 
 . Log into a *host* in your Red Hat Virtualization system with a mount to the *Export storage domain*.
 . Change to the *Export storage domain's* directory.
