Updated the appliance upload sections for RHV 4.1 and RHV 4.0 & 3.6; also changed all references to Red Hat Enterprise Virtualization to Red Hat Virtualization (as per new product naming), except for when we're documenting version 3.6.

--- a/doc-Installing_on_Red_Hat_Virtualization/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/cfme/master.adoc
@@ -1,6 +1,6 @@
-= Installing ManageIQ on Red Hat Enterprise Virtualization
+= Installing Red Hat CloudForms on Red Hat Virtualization
 :imagesdir: images
-:vernum: 0
+:vernum: 4.2
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -8,9 +8,9 @@
 :experimental:
 
 // Custom attributes
-include::common/attributes/miq.adoc[]
+include::common/attributes/cfme.adoc[]
 
-:miq:
+:cfme:
 
 :numbered:
 
@@ -36,5 +36,3 @@ include::common/initial-login-changepw.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
-
-
