--- a/doc-Installing_on_Red_Hat_Virtualization/miq/index.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/miq/index.adoc
@@ -1,6 +1,6 @@
-= Installing Red Hat CloudForms on Red Hat Enterprise Virtualization
+= Installing ManageIQ on Red Hat Virtualization
 :imagesdir: images
-:vernum: 4.2
+:vernum: 0
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -8,9 +8,9 @@
 :experimental:
 
 // Custom attributes
-include::common/attributes/cfme.adoc[]
+include::common/attributes/miq.adoc[]
 
-:cfme:
+:miq:
 
 :numbered:
 
@@ -36,3 +36,5 @@ include::common/initial-login-changepw.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
+
