--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -1,7 +1,7 @@
 [[installing-cloudforms]]
 == Installing {product-title}
 
-{product-title} is able to be installed and ready to configure in a few quick steps. After downloading {product-title} as a virtual machine image template from the Red Hat Customer Portal, the installation process takes you through the steps of uploading the appliance to a supported virtualization or cloud provider.
+{product-title} is able to be installed and ready to configure in a few quick steps. After downloading {product-title} as a virtual machine image template from the Red Hat Customer Portal, the installation process takes you through the steps of uploading the appliance to a Red Hat Virtualization environment.
 
 [IMPORTANT]
 =====
@@ -120,7 +120,7 @@ Please provide the REST API password for the admin@internal oVirt Engine user (C
 Ensure your Red Hat Enterprise Virtualization Manager has administrator access to the chosen export storage domain.
 ====
 
-It takes approximately 90 minutes to upload the {product-title} appliance file to the Red Hat Enterprise Virtualization Manager. Once the `OVF` is uploaded and imported as a template, add a network adapter to the template itself.
+It takes approximately 90 minutes to upload the {product-title} appliance file to the Red Hat Enterprise Virtualization Manager. Once the `OVA` is uploaded and imported as a template, add a network adapter to the template itself.
 
 
 [[uploading-the-appliance-manually]]
@@ -130,8 +130,8 @@ The following procedure provides manual upload instructions if the image uploade
 
 . Log into a *host* in your Red Hat Virtualization system with a mount to the *Export storage domain*.
 . Change to the *Export storage domain's* directory.
-. Copy the {product-title} appliance `OVF` archive to this directory.
-. Extract the `OVF` file using the `tar` command:
+. Copy the {product-title} appliance `OVA` archive to this directory.
+. Extract the `OVA` file using the `tar` command:
 +
 ----
 $ tar xvf cfme-rhevm-5.3-15.x86_64.rhevm.ova
