Image fix. Localization feedback.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -643,7 +643,7 @@ wget --no-check-certificate <%= evm[:post_install_callback_url] %>
 . Click the *Customization Templates* accordion.
 . Click image:1847.png[](*Configuration*), then image:1862.png[](*Add a New Customization Template*).
 . In *Basic Information*, type in a *Name* and *Description*.
-image:2325.png
+image:2325.png[]
 . Select the *Image Type* list. This list includes the PXE image types you created.
 . In *Type*, select *Kickstart* or *CloudInit* for Linux based systems, and *Sysprep* for Windows based system.
 . In the *Script* area, either paste the script from another source or type the script directly into the {product-title} interface.
