--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1511,7 +1511,7 @@ To enable displaying your custom logo in the corner of the {product-title} user 
 . Click *Tenants*, then click *My Company*.
 . Click image:1847.png[](*Configuration*), then click image:1851.png[](*Edit this item*).
 +
-image:use-config-settings.png[]
+image:use-configuration-settings.png[]
 +
 . Click *Use Configuration Settings* to switch it to `Yes`.
 . Click *Save*.
